# cpp-test

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json
.github/workflows/: ci.yml
.husky/: pre-commit
cmake/: SetTests.cmake
src/: CMakeLists.txt  main.cpp
src/math/: calculator.h
tests/: CMakeLists.txt  calculator_test.cpp
tools/: generate_code_coverage.sh
